# rust_project

./: .gitignore  README.md
application/: Cargo.toml
application/src/: main.rs
application/src/custom_widget/: alert.rs  colored_button.rs  custom_slider.rs  custom_zstack.rs  mod.rs  over_image.rs  resizable_box.rs  screenshot_image.rs  selected_rect.rs  shortcut_keys.rs  take_screenshot_button.rs
application/src/shortcut/: shortcut_settings.json
