[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Bertorelle","Francesco Abate","Elio Magliari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = "0.8.3"
image = "0.24.6"
random-string = "1.0.0"
screenshots = "0.8.0"
tracing = "0.1.37"
lazy_static = "1.4.0"
clippers = "0.1.2"
imageproc="0.23.0"
rusttype="0.9.3"
serde = "1.0.188"
serde_json = "1.0.107"
flate2 = "1.0.27"
[dependencies.druid]
version = "0.8.3"
features = ["im","svg","image-all","image","serde"]
