[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Pietro Bertorelle","Francesco Abate","Elio Magliari"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-shell = "0.8.3"
image = "0.25.8"
random-string = "1.1.0"
screenshots = "0.8.10"
tracing = "0.1.41"
lazy_static = "1.5.0"
clippers = "0.1.2"
imageproc="0.25.0"
serde = "1.0.228"
serde_json = "1.0.145"
flate2 = "1.0.27"
ab_glyph = "0.2.32"
[dependencies.druid]
version = "0.8.3"
features = ["im","svg","image-all","image","serde"]
